--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,7 +16,7 @@
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My second post</a></h2>
-            <p> I will describe some more interesting things in here</p>
+            <p> I will describe some more interesting things in here. </p>
         </div>
     </body>
 </html>
