--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>My first blog</title>
+        <title>This is my first blog</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">My first blog</a></h1>
+            <h1><a href="/">My first blog Site </a></h1>
         </div>
 
         <div>
@@ -16,7 +16,7 @@
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My second post</a></h2>
-            <p> I will describe some more interesting things in here. </p>
+            <p> I will describe some more interesting things in here.</p>
         </div>
     </body>
 </html>
